--- a/Shapesgrid/Config/QAConfig.xcconfig
+++ b/Shapesgrid/Config/QAConfig.xcconfig
@@ -1,3 +1,3 @@
 // If your app is using API Keys then make sure api keys have been added here in this config file (not in the source code)
-// Your PROD Environment BASE URL should be different
+// Your QA Environment BASE URL should be different
 BASE_URL =  https:/$()/staticcontent.cricut.com
